--- a/Assignments/Assignment-2/main.html
+++ b/Assignments/Assignment-2/main.html
@@ -3,6 +3,7 @@
 </style>
 <html>
   <head>
+    <title>BFS Visualization</title>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
     <script src="main.js" charset="utf-8"></script>
   </head>
